--- a/templates/ttedb/analysis.html
+++ b/templates/ttedb/analysis.html
@@ -377,8 +377,8 @@
 
         <!-- Forest Plots Tab -->
         <div class="tab-pane fade" id="forest" role="tabpanel">
-            <!-- Include Plotly JavaScript -->
-            <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+            <!-- Include Latest Plotly JavaScript -->
+            <script src="https://cdn.plot.ly/plotly-2.28.0.min.js"></script>
             
             <div class="row mt-4">
                 <div class="col-12">
@@ -404,9 +404,9 @@
                 </div>
                 <div class="card-body">
                     {{ forest_plots.hr|safe }}
-                </div>
             </div>
-            
+        </div>
+
             <!-- Odds Ratio Forest Plot -->
             <div class="card mb-4">
                 <div class="card-header">
@@ -457,7 +457,7 @@
                     <h5><i class="fa fa-info-circle me-2"></i>Python/Plotly Forest Plot Advantages</h5>
                 </div>
                 <div class="card-body">
-                    <div class="row">
+            <div class="row">
                         <div class="col-md-6">
                             <h6>🎯 Perfect Tooltip Management</h6>
                             <ul>
@@ -466,7 +466,7 @@
                                 <li>No positioning issues or cutoffs</li>
                                 <li>Professional statistical display</li>
                             </ul>
-                        </div>
+                                </div>
                         <div class="col-md-6">
                             <h6>🔬 Advanced Interactivity</h6>
                             <ul>
@@ -475,47 +475,48 @@
                                 <li>Professional publication-quality plots</li>
                                 <li>Export capabilities (PNG, SVG, HTML)</li>
                             </ul>
-                        </div>
-                    </div>
+                            </div>
+                                </div>
                     <div class="mt-3">
                         <small class="text-muted">
                             <strong>Technical Note:</strong> These forest plots are generated server-side using Python and Plotly, 
                             providing superior interactivity and tooltip management compared to HTML/CSS implementations.
                         </small>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
 
-
-                        
-                        <!-- Individual studies -->
-                        <div class="forest-study">
-                            <div class="study-label">Johnson et al. 2023</div>
+        <!-- Outlier/Inlier Analysis Tab -->
+        <div class="tab-pane fade" id="outlier-inlier" role="tabpanel">
+            <div class="row mt-4">
+                <div class="col-12">
+                    <div class="alert alert-info mb-4">
+                        <h5><i class="fa fa-search-plus me-2"></i>Detection of Systematic Patterns</h5>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 35%; width: 20%;">
                                     <div class="point-estimate" style="left: 60%;"></div>
                                 </div>
                             </div>
                             <div class="effect-text">0.03 [-0.21, 0.27]</div>
-                                </div>
-                        
+                </div>
+
                         <div class="forest-study">
                             <div class="study-label">Smith et al. 2022</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 40%; width: 18%;">
                                     <div class="point-estimate" style="left: 65%;"></div>
-                            </div>
                         </div>
-                            <div class="effect-text">0.07 [-0.16, 0.30]</div>
                     </div>
-                        
+                            <div class="effect-text">0.07 [-0.16, 0.30]</div>
+                </div>
+
                         <div class="forest-study">
                             <div class="study-label">Chen et al. 2023</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 45%; width: 12%;">
                                     <div class="point-estimate" style="left: 58%;"></div>
-                                </div>
-                            </div>
+                        </div>
+                    </div>
                             <div class="effect-text">0.04 [-0.12, 0.20]</div>
                 </div>
 
@@ -544,10 +545,10 @@
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 30%; width: 25%;">
                                     <div class="point-estimate" style="left: 45%;"></div>
-                        </div>
+            </div>
                     </div>
                             <div class="effect-text">-0.12 [-0.35, 0.11]</div>
-                </div>
+        </div>
 
                         <div class="forest-study">
                             <div class="study-label">Lee et al. 2023</div>
@@ -558,26 +559,26 @@
                     </div>
                             <div class="effect-text">0.11 [-0.08, 0.30]</div>
                 </div>
-                        
+
                         <div class="forest-study">
                             <div class="study-label">Brown et al. 2021</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 38%; width: 22%;">
                                     <div class="point-estimate" style="left: 55%;"></div>
-            </div>
+                            </div>
                             </div>
                             <div class="effect-text">0.02 [-0.24, 0.28]</div>
-        </div>
+                            </div>
 
                         <div class="forest-study">
                             <div class="study-label">Taylor et al. 2024</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 44%; width: 18%;">
                                     <div class="point-estimate" style="left: 62%;"></div>
-                        </div>
+                            </div>
                     </div>
                             <div class="effect-text">0.05 [-0.14, 0.24]</div>
-                </div>
+                            </div>
 
                         <div class="forest-study">
                             <div class="study-label">Kim et al. 2023</div>
@@ -587,15 +588,15 @@
                             </div>
                             </div>
                             <div class="effect-text">-0.08 [-0.29, 0.13]</div>
-                            </div>
+                        </div>
 
                         <div class="forest-study">
                             <div class="study-label">Davis et al. 2022</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 48%; width: 15%;">
                                     <div class="point-estimate" style="left: 68%;"></div>
-                            </div>
-                            </div>
+                    </div>
+                </div>
                             <div class="effect-text">0.09 [-0.06, 0.24]</div>
                             </div>
 
@@ -624,40 +625,40 @@
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 28%; width: 27%;" data-tooltip="95% CI: [-0.31, 0.20]">
                                     <div class="point-estimate" style="left: 45%;" data-tooltip="Point estimate: -0.14"></div>
-                                </div>
-                            </div>
-                            <div class="effect-text">-0.14 [-0.31, 0.20]</div>
                         </div>
+                    </div>
+                            <div class="effect-text">-0.14 [-0.31, 0.20]</div>
+                </div>
                         
                         <div class="forest-study">
                             <div class="study-label">Zhang et al. 2022</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 51%; width: 16%;" data-tooltip="95% CI: [-0.06, 0.26]">
                                     <div class="point-estimate" style="left: 67%;" data-tooltip="Point estimate: 0.10"></div>
-                                </div>
+            </div>
                             </div>
                             <div class="effect-text">0.10 [-0.06, 0.26]</div>
-                        </div>
-                        
+        </div>
+
                         <div class="forest-study">
                             <div class="study-label">Patel et al. 2024</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 43%; width: 19%;" data-tooltip="95% CI: [-0.15, 0.23]">
                                     <div class="point-estimate" style="left: 54%;" data-tooltip="Point estimate: 0.04"></div>
-                        </div>
+                            </div>
                     </div>
                             <div class="effect-text">0.04 [-0.15, 0.23]</div>
-                </div>
-                        
+                            </div>
+
                         <div class="forest-study">
                             <div class="study-label">Cohen et al. 2021</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 36%; width: 22%;" data-tooltip="95% CI: [-0.22, 0.16]">
                                     <div class="point-estimate" style="left: 48%;" data-tooltip="Point estimate: -0.03"></div>
-            </div>
+                            </div>
                             </div>
                             <div class="effect-text">-0.03 [-0.22, 0.16]</div>
-        </div>
+                            </div>
 
                         <div class="forest-study">
                             <div class="study-label">Murphy et al. 2023</div>
@@ -667,15 +668,15 @@
                             </div>
                             </div>
                             <div class="effect-text">0.08 [-0.08, 0.25]</div>
-                            </div>
+                        </div>
 
                         <div class="forest-study">
                             <div class="study-label">Foster et al. 2022</div>
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 41%; width: 20%;" data-tooltip="95% CI: [-0.17, 0.21]">
                                     <div class="point-estimate" style="left: 52%;" data-tooltip="Point estimate: 0.02"></div>
-                            </div>
-                            </div>
+                    </div>
+                </div>
                             <div class="effect-text">0.02 [-0.17, 0.21]</div>
                             </div>
 
@@ -684,7 +685,7 @@
                             <div class="ci-container">
                                 <div class="confidence-interval" style="left: 33%; width: 25%;" data-tooltip="95% CI: [-0.26, 0.24]">
                                     <div class="point-estimate" style="left: 47%;" data-tooltip="Point estimate: -0.01"></div>
-                            </div>
+                        </div>
                             </div>
                             <div class="effect-text">-0.01 [-0.26, 0.24]</div>
                         </div>
